@@ -1,5 +1,9 @@
 2005-07-11  Sam Steingold  <sds@gnu.org>
 
+	* modules/i18n/i18n.lisp (*features*): add :I18N
+
+2005-07-11  Sam Steingold  <sds@gnu.org>
+
 	* modules/pcre/pcre.lisp, modules/zlib/zlib.lisp:
 	* modules/syscalls/posix.lisp, modules/rawsock/sock.lisp:
 	* modules/berkeley-db/dbi.lisp, modules/dirkey/dirkey1.lisp:
